--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ pytorchKT/pytorchKT/__pycache__
 pytorchKT/pytorchKT/models/__pycache__
 pytorchKT/pytorchKT/preprocess/__pycache__
 pytorchKT-2/pytorchKT/preprocess/__pycache__
+pytorchKT-2/pytorchKT/models/__pycache__
+pytorchKT-2/pytorchKT/datasets/__pycache__
+pytorchKT-2/pytorchKT/__pycache__
+pytorchKT-2/pytorchKT/utils/__pycache__
+pytorchKT-2/pytorchKT/__pycache__
