--- a/pytorchKT-2/pytorchKT/configs/data_config.json
+++ b/pytorchKT-2/pytorchKT/configs/data_config.json
@@ -1,6 +1,6 @@
 {
     "assist2015": {
-        "dpath": "pytorchKT-2/dataset/ASSISTments2015/",
+        "dpath": "/home/toan/d/Azota/pytorchKnowledtracing/pytorchKT-2/dataset/ASSISTments2015",
         "num_q": 0,
         "num_c": 100,
         "input_type": [
@@ -8,7 +8,7 @@
         ],
         "max_concepts": 1,
         "min_seq_len": 3,
-        "maxlen": 70,
+        "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
@@ -196,8 +196,8 @@
         "test_original_file_quelevel": "test_quelevel.csv"
     },
     "junyi2015": {
-        "dpath": "../data/junyi2015",
-        "num_q": 721,
+        "dpath": "/home/toan/d/Azota/pytorchKnowledtracing/pytorchKT-2/datasets/Junyi",
+        "num_q": 703,
         "num_c": 39,
         "input_type": [
             "questions",
@@ -220,7 +220,12 @@
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
         "test_question_file": "test_question_sequences.csv",
-        "test_question_window_file": "test_question_window_sequences.csv"
+        "test_question_window_file": "test_question_window_sequences.csv",
+        "train_valid_original_file_quelevel": "train_valid_quelevel.csv",
+        "train_valid_file_quelevel": "train_valid_sequences_quelevel.csv",
+        "test_file_quelevel": "test_sequences_quelevel.csv",
+        "test_window_file_quelevel": "test_window_sequences_quelevel.csv",
+        "test_original_file_quelevel": "test_quelevel.csv"
     },
     "bridge2algebra2006": {
         "dpath": "../data/bridge2algebra2006",
@@ -256,7 +261,7 @@
     },
     "ednet": {
         "dpath": "/home/toan/d/Azota/pytorchKnowledtracing/pytorchKT-2/dataset/EdNet",
-        "num_q": 11181,
+        "num_q": 11901,
         "num_c": 188,
         "input_type": [
             "questions",
@@ -264,7 +269,7 @@
         ],
         "max_concepts": 7,
         "min_seq_len": 3,
-        "maxlen": 70,
+        "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
