update preprocess data

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ pytorchKT-2/pytorchKT/__pycache__
 pytorchKT-2/pytorchKT/utils/__pycache__
 pytorchKT-2/pytorchKT/__pycache__
 pytorchKT-2/saved_model
+pytorchKT-2/run_script.sh
