--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ pytorchKT-2/pytorchKT/utils/__pycache__
 pytorchKT-2/pytorchKT/__pycache__
 pytorchKT-2/saved_model
 pytorchKT-2/run_script.sh
+pytorchKT-2/pytorchKT/models/utils/__pycache__
+pytorchKT-2/pytorchKT/models/kc_models/__pycache__
