--- a/pytorchKT-2/pytorchKT/configs/data_config.json
+++ b/pytorchKT-2/pytorchKT/configs/data_config.json
@@ -3,14 +3,22 @@
         "dpath": "./datasets/ASSISTments2015",
         "num_q": 0,
         "num_c": 100,
-        "input_type": ["concepts"],
+        "input_type": [
+            "concepts"
+        ],
         "max_concepts": 1,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -24,14 +32,23 @@
         "dpath": "../data/algebra2005",
         "num_q": 173113,
         "num_c": 112,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 7,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -44,17 +61,26 @@
         "test_original_file_quelevel": "test_quelevel.csv"
     },
     "assist2009": {
-        "dpath": "./datasets/ASSISTments2009",
+        "dpath": "/home/toan/d/Azota/pytorchKnowledtracing/pytorchKT-2/datasets/ASSISTments2009",
         "num_q": 17737,
         "num_c": 123,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 4,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -70,11 +96,20 @@
         "dpath": "../data/slepemapy",
         "num_q": 2913,
         "num_c": 1458,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -85,13 +120,22 @@
         "dpath": "../data/assist2017",
         "num_q": 3162,
         "num_c": 102,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "min_seq_len": 3,
         "maxlen": 500,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -102,11 +146,20 @@
         "dpath": "../data/assist2012",
         "num_q": 53070,
         "num_c": 265,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -117,14 +170,22 @@
         "dpath": "../data/statics2011",
         "num_q": 0,
         "num_c": 1223,
-        "input_type": ["concepts"],
+        "input_type": [
+            "concepts"
+        ],
         "max_concepts": 1,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -138,14 +199,23 @@
         "dpath": "../data/junyi2015",
         "num_q": 721,
         "num_c": 39,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 1,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -156,14 +226,23 @@
         "dpath": "../data/bridge2algebra2006",
         "num_q": 129263,
         "num_c": 493,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 5,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -176,17 +255,26 @@
         "test_original_file_quelevel": "test_quelevel.csv"
     },
     "ednet": {
-        "dpath": "./datasets/EdNet",
-        "num_q": 11901,
+        "dpath": "/home/toan/d/Azota/pytorchKnowledtracing/pytorchKT-2/datasets",
+        "num_q": 12069,
         "num_c": 188,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 7,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -202,14 +290,23 @@
         "dpath": "../data/nips_task34",
         "num_q": 948,
         "num_c": 57,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 2,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -225,14 +322,22 @@
         "dpath": "../data/poj",
         "num_q": 0,
         "num_c": 2748,
-        "input_type": ["concepts"],
+        "input_type": [
+            "concepts"
+        ],
         "max_concepts": 1,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
@@ -246,13 +351,22 @@
         "dpath": "../data/peiyou",
         "num_q": 7652,
         "num_c": 865,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 6,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "train_valid_original_file": "train_valid.csv",
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
@@ -269,14 +383,23 @@
         "dpath": "../data/ednet5w",
         "num_q": 12235,
         "num_c": 188,
-        "input_type": ["questions", "concepts"],
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
         "max_concepts": 7,
         "min_seq_len": 3,
         "maxlen": 200,
         "emb_path": "",
         "train_valid_original_file": "train_valid.csv",
         "train_valid_file": "train_valid_sequences.csv",
-        "folds": [0, 1, 2, 3, 4],
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
         "test_original_file": "test.csv",
         "test_file": "test_sequences.csv",
         "test_window_file": "test_window_sequences.csv",
