--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ pytorchKT/saved_model
 pytorchKT/run_script.sh
 pytorchKT/pytorchKT/models/utils/__pycache__
 pytorchKT/pytorchKT/models/kc_models/__pycache__
+pytorchKT/pytorchKT/models/__pycache__
